--- a/oversteer/main.ui
+++ b/oversteer/main.ui
@@ -533,7 +533,8 @@
     <property name="program_name">Oversteer - Steering Wheel Manager</property>
     <property name="version">0.0.0</property>
     <property name="copyright" translatable="yes">(c) 2019 Bernat Arlandis</property>
-    <property name="authors">Bernat Arlandis</property>
+    <property name="authors">Bernat Arlandis
+Leandro Vergara</property>
     <property name="logo_icon_name"/>
     <property name="license_type">gpl-3-0</property>
     <signal name="response" handler="on_about_window_response" swapped="no"/>
