--- a/oversteer/main.ui
+++ b/oversteer/main.ui
@@ -396,7 +396,7 @@
               <object class="GtkLabel">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Save as</property>
+                <property name="label" translatable="yes">Save as new profile</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -430,6 +430,21 @@
             <property name="spacing">6</property>
             <property name="layout_style">start</property>
             <child>
+              <object class="GtkButton" id="test_button">
+                <property name="label" translatable="yes">Test</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="tooltip_text" translatable="yes">Test the wheel using an external application.</property>
+                <signal name="clicked" handler="on_test_clicked" swapped="no"/>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
               <object class="GtkButton" id="update_button">
                 <property name="label">gtk-refresh</property>
                 <property name="visible">True</property>
@@ -443,22 +458,23 @@
               <packing>
                 <property name="expand">True</property>
                 <property name="fill">True</property>
-                <property name="position">0</property>
+                <property name="position">1</property>
               </packing>
             </child>
             <child>
-              <object class="GtkButton" id="test_button">
-                <property name="label" translatable="yes">Test</property>
+              <object class="GtkButton" id="delete_button">
+                <property name="label">gtk-delete</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="tooltip_text" translatable="yes">Test the wheel using an external application.</property>
-                <signal name="clicked" handler="on_test_clicked" swapped="no"/>
+                <property name="use_stock">True</property>
+                <property name="always_show_image">True</property>
+                <signal name="clicked" handler="on_delete_clicked" swapped="no"/>
               </object>
               <packing>
-                <property name="expand">False</property>
+                <property name="expand">True</property>
                 <property name="fill">True</property>
-                <property name="position">1</property>
+                <property name="position">2</property>
               </packing>
             </child>
             <child>
@@ -475,7 +491,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
-                <property name="position">2</property>
+                <property name="position">3</property>
               </packing>
             </child>
           </object>
