--- a/oversteer/main.ui
+++ b/oversteer/main.ui
@@ -9,6 +9,7 @@
     <property name="window_position">center</property>
     <property name="destroy_with_parent">True</property>
     <property name="type_hint">dialog</property>
+    <signal name="delete-event" handler="on_delete_preferences" swapped="no"/>
     <child internal-child="vbox">
       <object class="GtkBox">
         <property name="can_focus">False</property>
